--- a/photos/templates/photos/add_photos_to_album.html
+++ b/photos/templates/photos/add_photos_to_album.html
@@ -5,28 +5,11 @@
 {% block body %}
 <div class="bg-base-100">
   <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-20 lg:max-w-7xl lg:px-8">
-
-    <!-- {% if existing_photos %}
-      {% for photo in existing_photos %}
-        <a class="group">
-          <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-            <img src="{{photo.image.url}}" alt="{{ photo.pk }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
-          </div>
-        </a>
-      {% endfor %}
-    {% else %}
-        <div class="prose prose-sm md:prose-base">
-          <h1>Your photo album is empty..!</h1>
-        </div>
-    {% endif %} -->
-
       <div class="rounded-lg bg-base-200 p-8 shadow-lg lg:p-12"">
+
         <form method="post" enctype="multipart/form-data">
           {% csrf_token %}
-
-
           <label for="images" class="text-2xl font-bold tracking-tight">Upload new photos:</label>
-          <input type="file" name="images" required multiple class="mt-6 block file-input file-input-bordered file-input-primary w-full max-w-xs">
 
           <div class="mt-3 flex -space-x-8 overflow-hidden">
             {% for photo in album_photos %}
@@ -39,6 +22,8 @@
             <a>{% if rest > 0 %}+ {{rest}} other{{rest|pluralize}}{% endif %}</a>
           </div>
 
+          <input type="file" name="images" required multiple class="mt-6 block file-input file-input-bordered file-input-primary w-full max-w-xs">
+
           <div class="mt-6 flex gap-4">
             <a href="{% url 'albums:album_detail' album.pk %}" class="btn btn-neutral">
               <svg class="w-6 h-6 stroke-2 fill-current" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
@@ -47,7 +32,7 @@
               </svg>
               Back
             </a>
-            <button class="btn btn-primary" type="submit">Add Photos</button>
+            <button class="btn btn-primary btn-wide" type="submit">Save</button>
 
           </div>
         </form>
