--- a/photos/templates/photos/photo_detail.html
+++ b/photos/templates/photos/photo_detail.html
@@ -23,7 +23,7 @@
         </div>
       {% endif %}
 
-      <p class="mt-2 text-sm text-right font-light opacity-0 group-hover:opacity-80">Uploaded by <span class="font-medium">{% firstof photo.uploaded_by.first_name photo.uploaded_by.email %}</span></p>
+      <p class="my-2 text-sm text-right font-light opacity-0 group-hover:opacity-80">Uploaded by <span class="font-medium">{% firstof photo.uploaded_by.first_name photo.uploaded_by.email %}</span></p>
 
       {% if next %}
       <div class="absolute bottom-1/2 right-1">
@@ -36,14 +36,14 @@
   </div>
   {# Photo description #}
   {% if photo.description %}
-    <div class="flex place-content-center gap-4 mx-auto max-w-2xl lg:max-w-4xl px-4 lg:px-8 py-4 lg:py-6 mb-6 mt-2 border rounded-md">
-      <div class="text-lg">
+    <div class="relative flex place-content-center gap-4 mx-auto max-w-2xl lg:max-w-4xl px-4 lg:px-8 py-1 lg:py-2 mb-6 border border-gray-400/25 rounded-md">
+      <div class="text-lg absolute left-2 -top-3 z-10">
         <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M16.19 2H7.81C4.17 2 2 4.17 2 7.81V16.18C2 19.83 4.17 22 7.81 22H16.18C19.82 22 21.99 19.83 21.99 16.19V7.81C22 4.17 19.83 2 16.19 2ZM11.61 14.84C11.61 15.93 10.76 16.78 9.67 16.78H8.19C7.12 16.78 6.25 15.91 6.25 14.84V12.17C6.25 9.09 6.92 8.4 8.71 7.34C8.83 7.27 8.96 7.24 9.09 7.24C9.35 7.24 9.6 7.37 9.74 7.61C9.95 7.97 9.83 8.43 9.48 8.64C8.27 9.34 7.85 9.6 7.77 11.41H9.68C10.77 11.41 11.62 12.26 11.62 13.35V14.84H11.61ZM17.75 14.84C17.75 15.93 16.9 16.78 15.81 16.78H14.32C13.25 16.78 12.38 15.91 12.38 14.84V12.17C12.38 9.09 13.05 8.4 14.84 7.34C14.96 7.27 15.09 7.24 15.22 7.24C15.48 7.24 15.73 7.37 15.87 7.61C16.08 7.97 15.96 8.43 15.61 8.64C14.4 9.36 13.98 9.62 13.9 11.43H15.81C16.9 11.43 17.75 12.28 17.75 13.37V14.84Z"></path> </g></svg>
       </div>
-      <div class="font-medium tracking-wide">
+      <div class="font-normal italic tracking-wide">
         {{photo.description}}
       </div>
-      <div class="flex text-lg items-end">
+      <div class="flex text-lg items-end absolute right-2 -bottom-3">
         <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M16.19 2H7.81C4.17 2 2 4.17 2 7.81V16.18C2 19.83 4.17 22 7.81 22H16.18C19.82 22 21.99 19.83 21.99 16.19V7.81C22 4.17 19.83 2 16.19 2ZM11.61 11.84C11.61 14.92 10.94 15.61 9.15 16.67C9.03 16.74 8.9 16.77 8.77 16.77C8.51 16.77 8.26 16.64 8.12 16.4C7.91 16.04 8.03 15.58 8.38 15.37C9.59 14.65 10.01 14.39 10.09 12.58H8.19C7.1 12.58 6.25 11.73 6.25 10.64V9.16C6.25 8.07 7.1 7.22 8.19 7.22H9.68C10.75 7.22 11.62 8.09 11.62 9.16V11.84H11.61ZM17.75 11.84C17.75 14.92 17.08 15.61 15.29 16.67C15.17 16.74 15.04 16.77 14.91 16.77C14.65 16.77 14.4 16.64 14.26 16.4C14.05 16.04 14.17 15.58 14.52 15.37C15.73 14.65 16.15 14.39 16.23 12.58H14.32C13.23 12.58 12.38 11.73 12.38 10.64V9.16C12.38 8.07 13.23 7.22 14.32 7.22H15.81C16.88 7.22 17.75 8.09 17.75 9.16V11.84Z"></path> </g></svg>    </div>
     </div>
   {% endif %}
